<resources>
    <string name="app_name">MSD VIP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="btnFirstLogin">Iniciar Sesión</string>
    <string name="btnFirstSignUP">Crear Cuenta</string>
    <string name="lblCrearCuenta">Crear Cuenta</string>
    <string name="txtCMP" />
    <string name="btnValidar">Validar</string>
    <string name="txtCMDLogin" />
    <string name="txtLoginPassword" />
    <string name="txtLoginInicarSesion">Iniciar Sesión</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="lblNombreDocNavMain">Android </string>
    <string name="lblApellidoDocNavMain">Studio</string>
    <string name="lblPerfilNameView">Crear Cuenta</string>
    <string name="BtnFormularioValidar">Validar</string>

    <!--Variables string del menu bar-->
    <string name="comunicacion_string">Comunicación</string>
    <string name="servicios_string">Servicios</string>
    <string name="perfil_string">Perfil</string>
    <string name="nuevaafuliacion_string">Nueva Afiliación</string>
<!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="title_activity_list_mensajeria">ListMensajeriaActivity</string>
    <string name="BtnMensajeEnviar">Enviar</string>
    <string name="btnCancelarMensaje">Cancelar</string>
    <string name="lblPerfilEditar">Mis Datos </string>
</resources>
