<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.consorciohbo.app.msdvip.UI.ControlsViews.LoginActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Iniciar Sesión"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:id="@+id/imageView4"
        android:src="@drawable/imglogo"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtLoginCMD"
        android:numeric="integer"
        android:textSize="20sp"
        android:textColor="#070606"
        android:paddingLeft="25dp"
        android:text="@string/txtCMDLogin"
        android:hint="CMP"
        android:textColorHint="#747373"
        android:maxLength="6"
        android:layout_above="@+id/txtPasswordLogin"
        android:layout_marginBottom="35dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center|center_vertical|center_horizontal"
        android:textCursorDrawable="@drawable/color_cursor"
        android:singleLine="false"
        android:textIsSelectable="false"
        android:linksClickable="false"
        android:longClickable="false"
        android:autoLink="none" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtPasswordLogin"
        android:text="@string/txtLoginPassword"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center|center_vertical|center_horizontal"
        android:textCursorDrawable="@drawable/color_cursor"
        />

    <Button
        android:id="@+id/btnIniciarSecionLogin"

        android:text="@string/txtLoginInicarSesion"
        android:textColor="#55B3AF"
        android:textSize="20sp"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:background="@drawable/buttoniniciarsesionshape"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/txtPasswordLogin"
        android:layout_centerHorizontal="true"
        android:gravity="center|center_vertical|center_horizontal" />

</RelativeLayout>
